# shardex

./: .gitignore  CODE_REVIEW.md  Cargo.toml  MIGRATION.md  README.md  plan.md  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: ci.yaml
.swissarmyhammer/issues/: DUPLICATION_000009_redundant_default_implementations.md  DUPLICATION_000010_test_environment_pattern.md  DUPLICATION_000011_magic_constants_scattered.md  IMPL_000001_document_text_storage_methods.md  IMPL_000002_index_rebuild_recovery.md  IMPL_000003_truncate_to_last_valid.md  IMPL_000004_pointer_corruption_repair.md  IMPL_000006_performance_demo.md  PATTERN_000008_derive_attribute_ordering.md  PATTERN_000012_monitoring_duplicate_structs.md  REFACTOR_000005_monitoring_stubs.md  REFACTOR_000007_monitoring_placeholder_metrics.md  plan_000001_error-types-and-configuration.md  plan_000002_ulid-support-and-identifiers.md  plan_000003_core-data-structures.md  plan_000004_memory-mapping-abstractions.md  plan_000005_directory-structure-and-layout.md  plan_000006_memory-mapped-vector-storage.md  plan_000007_memory-mapped-posting-storage.md  plan_000008_checksum-validation-integrity.md  plan_000009_file-header-management.md  plan_000010_individual-shard-creation.md  plan_000011_shard-vector-operations.md  plan_000012_shard-centroid-calculation.md  plan_000013_shard-splitting-logic.md  plan_000014_shardex-index-structure.md  plan_000015_centroid-based-shard-selection.md  plan_000016_parallel-shard-search.md  plan_000017_copy-on-write-index-updates.md  plan_000018_wal-segment-management.md  plan_000019_transaction-recording-batching.md  plan_000020_wal-replay-recovery.md  plan_000021_batch-processing-timer.md  plan_000022_bloom-filter-implementation.md  plan_000023_bloom-filter-shard-integration.md  plan_000024_efficient-document-deletion.md  plan_000025_k-nearest-neighbors-search.md  plan_000026_multi-shard-search-coordination.md  (+14 more)
benches/: document_text_performance_bench.rs
docs/: api-reference.md  architecture.md  getting-started.md  performance.md  text-storage-migration.md  troubleshooting.md
examples/: basic_usage.rs  batch_operations.rs  configuration.rs  document_text_advanced.rs  document_text_basic.rs  document_text_configuration.rs  error_handling.rs  monitoring.rs
src/: async_document_text_storage.rs  batch_processor.rs  bloom_filter.rs  concurrent.rs  concurrent_document_text_storage.rs  config.rs  config_persistence.rs  constants.rs  cow_index.rs  crash_recovery.rs  deduplication.rs  distance.rs  document_text_entry.rs  document_text_performance.rs  document_text_storage.rs  document_transaction_coordinator.rs  error.rs  error_context_integration_test.rs  error_handling.rs  error_handling_integration_test.rs  identifiers.rs  integrity.rs  layout.rs  lib.rs  memory.rs  monitoring.rs  monitoring_broken.rs  posting_storage.rs  prelude.rs  search_coordinator.rs  shard.rs  shardex.rs  shardex_index.rs  statistics_integration_test.rs  structures.rs  test_utils.rs  text_memory_pool.rs  transactions.rs  vector_storage.rs  wal.rs  (+1 more)
tests/: api_integration.rs  api_memory.rs  api_performance.rs  api_surface.rs  batch_operations_integration_test.rs  batch_operations_tests.rs  checksum_verification_test.rs  common.rs  concurrent_coordination_tests.rs  concurrent_edge_case_tests.rs  concurrent_performance_demo.rs  cow_concurrent_safety_tests.rs  crash_recovery_tests.rs  document_text_advanced_test.rs  document_text_entry_tests.rs  document_text_error_tests.rs  document_text_integration_tests.rs  document_text_performance_integration_test.rs  document_text_performance_tests.rs  document_text_storage_tests.rs  document_text_test_utils.rs  integration_tests.rs  wal_replay_debug.rs  wal_replay_tests.rs
(+94 files in other folders)
