[package]
name = "shardex"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance vector indexing system using memory-mapped Arrow arrays"
license = "MIT"
repository = "https://github.com/wballard/shardex"

[dependencies]
arrow = "53"
arrow-array = "53"
arrow-buffer = "53"
arrow-data = "53"
arrow-schema = "53"
arrow-ipc = "53"
async-trait = "0.1"
memmap2 = "0.9"
rayon = "1.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.14"
ulid = "1.1"
toml = "0.8"
tracing = "0.1"
crc32fast = "1.4"
bincode = "1.3"
tokio = { version = "1.0", features = ["rt", "time", "sync", "macros"] }
tokio-util = "0.7"
futures = "0.3"
rustc-hash = "1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.8"
tokio = { version = "1.0", features = ["rt", "macros"] }
tokio-test = "0.4"



[lib]
name = "shardex"
path = "src/lib.rs"



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
