[package]
name = "shardex"
version = "0.1.0"
edition = "2021"
authors = ["William Ballard <wballard@gmail.com>"]
description = "A high-performance memory-mapped vector search engine with ACID transactions and incremental updates"
license = "MIT"
repository = "https://github.com/wballard/shardex"
homepage = "https://github.com/wballard/shardex"
documentation = "https://docs.rs/shardex"
readme = "README.md"
keywords = ["vector", "search", "embedding", "index", "similarity"]
categories = [
    "algorithms",
    "data-structures",
    "database-implementations",
    "science",
]
rust-version = "1.70"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
apithing = "0.1.0"
arrow = "53"
arrow-array = "53"
arrow-buffer = "53"
arrow-data = "53"
arrow-schema = "53"
arrow-ipc = "53"
async-trait = "0.1"
memmap2 = "0.9"
rayon = "1.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.14"
ulid = "1.1"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
tracing = "0.1"
log = "0.4"
libc = "0.2"
crc32fast = "1.4"
bincode = "1.3"
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }
tokio-util = "0.7"
futures = "0.3"
rustc-hash = "1.1"
glob = "0.3"
parking_lot = "0.12"
hdrhistogram = "7.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.8"
fastrand = "2.0"
tokio-test = "0.4"

[[bench]]
name = "document_text_performance_bench"
harness = false


[lib]
name = "shardex"
path = "src/lib.rs"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
